crates/php-parser/tests/snapshots/integration__dynamic_class_constant_access.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$a = Foo::{$name};
$b = Foo::{'CONST_' . $suffix};
$c = $class::$$dynamic;
$d = $class::${'prop_' . $name};

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "ClassConstAccessDynamic": {
                    "class": {
                      "kind": {
                        "Identifier": "Foo"
                      },
                      "span": {
                        "start": 11,
                        "end": 14
                      }
                    },
                    "member": {
                      "kind": {
                        "Variable": "name"
                      },
                      "span": {
                        "start": 17,
                        "end": 22
                      }
                    }
                  }
                },
                "span": {
                  "start": 11,
                  "end": 23
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 23
          }
        }
      },
      "span": {
        "start": 6,
        "end": 25
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 25,
                  "end": 27
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "ClassConstAccessDynamic": {
                    "class": {
                      "kind": {
                        "Identifier": "Foo"
                      },
                      "span": {
                        "start": 30,
                        "end": 33
                      }
                    },
                    "member": {
                      "kind": {
                        "Binary": {
                          "left": {
                            "kind": {
                              "String": "CONST_"
                            },
                            "span": {
                              "start": 36,
                              "end": 44
                            }
                          },
                          "op": "Concat",
                          "right": {
                            "kind": {
                              "Variable": "suffix"
                            },
                            "span": {
                              "start": 47,
                              "end": 54
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 36,
                        "end": 54
                      }
                    }
                  }
                },
                "span": {
                  "start": 30,
                  "end": 55
                }
              }
            }
          },
          "span": {
            "start": 25,
            "end": 55
          }
        }
      },
      "span": {
        "start": 25,
        "end": 57
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "c"
                },
                "span": {
                  "start": 57,
                  "end": 59
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "StaticPropertyAccessDynamic": {
                    "class": {
                      "kind": {
                        "Variable": "class"
                      },
                      "span": {
                        "start": 62,
                        "end": 68
                      }
                    },
                    "member": {
                      "kind": {
                        "VariableVariable": {
                          "kind": {
                            "Variable": "dynamic"
                          },
                          "span": {
                            "start": 71,
                            "end": 79
                          }
                        }
                      },
                      "span": {
                        "start": 70,
                        "end": 79
                      }
                    }
                  }
                },
                "span": {
                  "start": 62,
                  "end": 79
                }
              }
            }
          },
          "span": {
            "start": 57,
            "end": 79
          }
        }
      },
      "span": {
        "start": 57,
        "end": 81
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "d"
                },
                "span": {
                  "start": 81,
                  "end": 83
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "StaticPropertyAccessDynamic": {
                    "class": {
                      "kind": {
                        "Variable": "class"
                      },
                      "span": {
                        "start": 86,
                        "end": 92
                      }
                    },
                    "member": {
                      "kind": {
                        "VariableVariable": {
                          "kind": {
                            "Binary": {
                              "left": {
                                "kind": {
                                  "String": "prop_"
                                },
                                "span": {
                                  "start": 96,
                                  "end": 103
                                }
                              },
                              "op": "Concat",
                              "right": {
                                "kind": {
                                  "Variable": "name"
                                },
                                "span": {
                                  "start": 106,
                                  "end": 111
                                }
                              }
                            }
                          },
                          "span": {
                            "start": 96,
                            "end": 111
                          }
                        }
                      },
                      "span": {
                        "start": 94,
                        "end": 111
                      }
                    }
                  }
                },
                "span": {
                  "start": 86,
                  "end": 111
                }
              }
            }
          },
          "span": {
            "start": 81,
            "end": 111
          }
        }
      },
      "span": {
        "start": 81,
        "end": 114
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 114
  }
}
