crates/php-parser/tests/snapshots/integration__dynamic_property_access.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php $obj->$prop; $obj->{$name . 'Suffix'};
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "PropertyAccess": {
              "object": {
                "kind": {
                  "Variable": "obj"
                },
                "span": {
                  "start": 6,
                  "end": 10
                }
              },
              "property": {
                "kind": {
                  "Variable": "prop"
                },
                "span": {
                  "start": 12,
                  "end": 17
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 17
          }
        }
      },
      "span": {
        "start": 6,
        "end": 19
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "PropertyAccess": {
              "object": {
                "kind": {
                  "Variable": "obj"
                },
                "span": {
                  "start": 19,
                  "end": 23
                }
              },
              "property": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "name"
                      },
                      "span": {
                        "start": 26,
                        "end": 31
                      }
                    },
                    "op": "Concat",
                    "right": {
                      "kind": {
                        "String": "Suffix"
                      },
                      "span": {
                        "start": 34,
                        "end": 42
                      }
                    }
                  }
                },
                "span": {
                  "start": 26,
                  "end": 42
                }
              }
            }
          },
          "span": {
            "start": 19,
            "end": 42
          }
        }
      },
      "span": {
        "start": 19,
        "end": 44
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 44
  }
}
