crates/php-parser/tests/snapshots/integration__echo_multiple.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php echo 1, 2, 3;
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Int": 1
            },
            "span": {
              "start": 11,
              "end": 12
            }
          },
          {
            "kind": {
              "Int": 2
            },
            "span": {
              "start": 14,
              "end": 15
            }
          },
          {
            "kind": {
              "Int": 3
            },
            "span": {
              "start": 17,
              "end": 18
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 19
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 19
  }
}
