crates/php-parser/tests/snapshots/integration__empty_group_use.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
expected at least one import in group use, found '}'
