crates/php-parser/tests/snapshots/integration__empty_return.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php return;
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Return": null
      },
      "span": {
        "start": 6,
        "end": 13
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 13
  }
}
