crates/php-parser/tests/snapshots/integration__emptyfile.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [],
  "span": {
    "start": 0,
    "end": 0
  }
}
